testsuite/tests/rename/should_fail/MultiCaretFallback.stderr
MultiCaretFallback.hs:15:7: error: [GHC-10498]
    Conflicting definitions for ‘a’
    At: APhantom.hs:50:7
   |
15 |       a = 2
   |       ^
   |
14 |   let a = 1
   |       ^

